syntax = "proto3";
package hello;

import "google/protobuf/timestamp.proto";

message Metadata {
  int32 f_name_letter_count = 1;
  int32 l_name_letter_count = 2;
  google.protobuf.Timestamp created_at = 3;
}

message HelloRequest {
  string first_name = 1;
  string last_name = 2;
  Metadata metadata = 3;
}

message HelloResponse {
  string full_name = 1;
  Metadata metadata = 2;
}

option go_package = "proto/";
